antex-rs/tui/src/bottom_pane/snapshots/antex_tui__bottom_pane__chat_composer__tests__footer_collapse_plan_empty_mode_cycle_with_context.snap
---
source: tui/src/bottom_pane/chat_composer.rs
expression: terminal.backend()
---
"                                                            "
" ┃ Ask Antex to do anything                                 "
" ┃                                                          "
" ┃                                                          "
" ┃                                                          "
" ┃                                                          "
" ┃                                                          "
"                                                            "
"  Plan mode (shift+tab to cycle)         100% context left  "
